// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-indépendant > Année incomplète 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3749
indépendant . cotisations et contributions . cotisations: 1360
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 2080
indépendant . rémunération . brute: 3749
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000"
`;

exports[`calculate simulations-indépendant > Année incomplète 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 7205
indépendant . cotisations et contributions . cotisations: 1567
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 5155
indépendant . rémunération . brute: 7205
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000"
`;

exports[`calculate simulations-indépendant > Année incomplète 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14082
indépendant . cotisations et contributions . cotisations: 2951
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . brute: 14082
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000"
`;

exports[`calculate simulations-indépendant > Année incomplète 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 140741
indépendant . cotisations et contributions . cotisations: 30519
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 103020
indépendant . rémunération . brute: 140741
indépendant . rémunération . impôt: 26039
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73961"
`;

exports[`calculate simulations-indépendant > Année incomplète 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1272290
indépendant . cotisations et contributions . cotisations: 154818
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1035085
indépendant . rémunération . brute: 1272290
indépendant . rémunération . impôt: 471215
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528785"
`;

exports[`calculate simulations-indépendant > DROM 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 20000
indépendant . cotisations et contributions . cotisations: 4252
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 14622
indépendant . rémunération . brute: 20000
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 14193
indépendant . rémunération . nette . après impôt: 14193"
`;

exports[`calculate simulations-indépendant > acre 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 72973
indépendant . cotisations et contributions . cotisations: 17615
indépendant . cotisations et contributions . début activité: 3131
indépendant . revenu professionnel: 51566
indépendant . rémunération . brute: 72973
indépendant . rémunération . impôt: 8574
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41426"
`;

exports[`calculate simulations-indépendant > activité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28412
indépendant . cotisations et contributions . cotisations: 6252
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20610
indépendant . rémunération . brute: 28412
indépendant . rémunération . impôt: 543
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19457"
`;

exports[`calculate simulations-indépendant > activité 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28440
indépendant . cotisations et contributions . cotisations: 6260
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20610
indépendant . rémunération . brute: 28440
indépendant . rémunération . impôt: 543
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19457"
`;

exports[`calculate simulations-indépendant > années précédentes 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 87629
indépendant . cotisations et contributions . cotisations: 21221
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 61881
indépendant . rémunération . brute: 87629
indépendant . rémunération . impôt: 11730
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48270"
`;

exports[`calculate simulations-indépendant > années précédentes 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 73208
indépendant . cotisations et contributions . cotisations: 16453
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51985
indépendant . rémunération . brute: 73208
indépendant . rémunération . impôt: 8882
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41118"
`;

exports[`calculate simulations-indépendant > années précédentes 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 59110
indépendant . cotisations et contributions . cotisations: 13641
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 41602
indépendant . rémunération . brute: 59110
indépendant . rémunération . impôt: 6074
indépendant . rémunération . nette: 40000
indépendant . rémunération . nette . après impôt: 33926"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 79448
indépendant . cotisations et contributions . cotisations: 19117
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51705
indépendant . rémunération . brute: 79448
indépendant . rémunération . impôt: 3071
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 46929"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 81038
indépendant . cotisations et contributions . cotisations: 19511
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51739
indépendant . rémunération . brute: 81038
indépendant . rémunération . impôt: 3077
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 46923"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 85757
indépendant . cotisations et contributions . cotisations: 20691
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51840
indépendant . rémunération . brute: 85757
indépendant . rémunération . impôt: 3093
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 46907"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 75026
indépendant . cotisations et contributions . cotisations: 14335
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51610
indépendant . rémunération . brute: 75026
indépendant . rémunération . impôt: 3056
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 46944"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 75028
indépendant . cotisations et contributions . cotisations: 11813
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51610
indépendant . rémunération . brute: 75028
indépendant . rémunération . impôt: 3056
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 46944"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 681523
indépendant . cotisations et contributions . cotisations: 93851
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 517952
indépendant . rémunération . brute: 681523
indépendant . rémunération . impôt: 186665
indépendant . rémunération . nette: 500000
indépendant . rémunération . nette . après impôt: 313335"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
indépendant . cotisations et contributions . cotisations: 6669
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 21701
indépendant . rémunération . brute: 30000
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 17257
indépendant . rémunération . nette . après impôt: 17257"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
indépendant . cotisations et contributions . cotisations: 6669
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 21701
indépendant . rémunération . brute: 30000
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 16057
indépendant . rémunération . nette . après impôt: 16057"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
indépendant . cotisations et contributions . cotisations: 6669
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 21701
indépendant . rémunération . brute: 30000
indépendant . rémunération . impôt: 226
indépendant . rémunération . nette: 20057
indépendant . rémunération . nette . après impôt: 19831"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 20000
indépendant . cotisations et contributions . cotisations: 4252
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 14622
indépendant . rémunération . brute: 20000
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 13693
indépendant . rémunération . nette . après impôt: 13693"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
indépendant . cotisations et contributions . cotisations: 54464
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 229265
indépendant . rémunération . brute: 300000
indépendant . rémunération . impôt: 70218
indépendant . rémunération . nette: 215877
indépendant . rémunération . nette . après impôt: 145659"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
indépendant . cotisations et contributions . cotisations: 54464
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 229265
indépendant . rémunération . brute: 300000
indépendant . rémunération . impôt: 68643
indépendant . rémunération . nette: 212377
indépendant . rémunération . nette . après impôt: 143734"
`;

exports[`calculate simulations-indépendant > cotisations forfaitaires début d'activité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 50000
indépendant . cotisations et contributions . cotisations: 12070
indépendant . cotisations et contributions . début activité: 3593
indépendant . revenu professionnel: 35294
indépendant . rémunération . brute: 50000
indépendant . rémunération . impôt: 2633
indépendant . rémunération . nette: 34221
indépendant . rémunération . nette . après impôt: 31588"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1465
indépendant . cotisations et contributions . cotisations: 1185
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 118
indépendant . rémunération . brute: 1465
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 100
indépendant . rémunération . nette . après impôt: 100"
`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 220
indépendant . cotisations et contributions . cotisations: 0
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 100
indépendant . rémunération . brute: 220
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 100
indépendant . rémunération . nette . après impôt: 100"
`;

exports[`calculate simulations-indépendant > cotisations minimales 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 967
indépendant . cotisations et contributions . cotisations: 35
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 804
indépendant . rémunération . brute: 967
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 800
indépendant . rémunération . nette . après impôt: 800"
`;

exports[`calculate simulations-indépendant > exonération invalidité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 45000
indépendant . cotisations et contributions . cotisations: 6384
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 36232
indépendant . rémunération . brute: 45000
indépendant . rémunération . impôt: 2887
indépendant . rémunération . nette: 35266
indépendant . rémunération . nette . après impôt: 32379"
`;

exports[`calculate simulations-indépendant > exonération invalidité 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 9000
indépendant . cotisations et contributions . cotisations: 1702
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 6725
indépendant . rémunération . brute: 9000
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 6532
indépendant . rémunération . nette . après impôt: 6532"
`;

exports[`calculate simulations-indépendant > exonération invalidité 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 10000
indépendant . cotisations et contributions . cotisations: 1514
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 7863
indépendant . rémunération . brute: 10000
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 7648
indépendant . rémunération . nette . après impôt: 7648

Notifications affichées : indépendant . cotisations et contributions . cotisations . exonérations . cumul Acre et invalidité"
`;

exports[`calculate simulations-indépendant > exonération invalidité 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 15000
indépendant . cotisations et contributions . cotisations: 2157
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 11968
indépendant . rémunération . brute: 15000
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 11646
indépendant . rémunération . nette . après impôt: 11646"
`;

exports[`calculate simulations-indépendant > exonération âge 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 55000
indépendant . cotisations et contributions . cotisations: 12903
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 39209
indépendant . rémunération . brute: 55000
indépendant . rémunération . impôt: 3690
indépendant . rémunération . nette: 38029
indépendant . rémunération . nette . après impôt: 34339"
`;

exports[`calculate simulations-indépendant > imposition à l'IR 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
indépendant . cotisations et contributions . cotisations: 23564
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 71284
indépendant . rémunération . brute: 100000
indépendant . rémunération . impôt: 14489
indépendant . rémunération . nette: 69138
indépendant . rémunération . nette . après impôt: 54649"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28412
indépendant . cotisations et contributions . cotisations: 6252
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20610
indépendant . rémunération . brute: 28412
indépendant . rémunération . impôt: 2061
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 17939"
`;

exports[`calculate simulations-indépendant > inversions IR 1`] = `
"entreprise . charges: 1000
entreprise . chiffre d'affaires: 20000
indépendant . cotisations et contributions . cotisations: 4028
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 13896
indépendant . rémunération . brute: 19000
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 13488
indépendant . rémunération . nette . après impôt: 13488"
`;

exports[`calculate simulations-indépendant > inversions IR 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14082
indépendant . cotisations et contributions . cotisations: 2951
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . brute: 14082
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000"
`;

exports[`calculate simulations-indépendant > inversions IR 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 62171
indépendant . cotisations et contributions . cotisations: 15440
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 43483
indépendant . rémunération . brute: 62171
indépendant . rémunération . impôt: 6149
indépendant . rémunération . nette: 42149
indépendant . rémunération . nette . après impôt: 36000"
`;

exports[`calculate simulations-indépendant > inversions IS 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14082
indépendant . cotisations et contributions . cotisations: 2951
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . brute: 14082
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000"
`;

exports[`calculate simulations-indépendant > inversions IS 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14082
indépendant . cotisations et contributions . cotisations: 2951
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . brute: 14082
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000"
`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1952
indépendant . cotisations et contributions . cotisations: 1225
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 532
indépendant . rémunération . brute: 1952
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 500
indépendant . rémunération . nette . après impôt: 500"
`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 2561
indépendant . cotisations et contributions . cotisations: 1274
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1050
indépendant . rémunération . brute: 2561
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000"
`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3168
indépendant . cotisations et contributions . cotisations: 1323
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1567
indépendant . rémunération . brute: 3168
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 1500
indépendant . rémunération . nette . après impôt: 1500"
`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3749
indépendant . cotisations et contributions . cotisations: 1360
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 2080
indépendant . rémunération . brute: 3749
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000"
`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 7205
indépendant . cotisations et contributions . cotisations: 1567
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 5155
indépendant . rémunération . brute: 7205
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000"
`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14082
indépendant . cotisations et contributions . cotisations: 2951
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . brute: 14082
indépendant . rémunération . impôt: 0
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000"
`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 140741
indépendant . cotisations et contributions . cotisations: 30519
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 103020
indépendant . rémunération . brute: 140741
indépendant . rémunération . impôt: 26039
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73961"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1272290
indépendant . cotisations et contributions . cotisations: 154818
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1035085
indépendant . rémunération . brute: 1272290
indépendant . rémunération . impôt: 471215
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528785"
`;
